packages/taquito-michel-codec/test/contracts_011/ill_typed/view_toplevel_bad_name_invalid_char_set.tz
parameter nat ;
storage nat ;
code { CAR ; NIL operation ; PAIR } ;
view "^$&*!#~(-=)" nat nat { UNPAIR ; ADD } ;

